Fix scrollbar styling to show on chrome

--- a/app/themes/odfw-ocs-sage/assets/styles/layouts/_sidebar.scss
+++ b/app/themes/odfw-ocs-sage/assets/styles/layouts/_sidebar.scss
@@ -41,21 +41,29 @@
       // -ms-overflow-style: none;
 
       &::-webkit-scrollbar {
-				// opacity: 0;
+        background: $greyDark;
 				width: 10px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: darken($greyDark, 5%);
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: darken($greyLighter, 10%);
       }
 
 			&:hover {
 				&::-webkit-scrollbar {
-					opacity: 1;
+					// opacity: 1;
 					// width: 5px;
 				}
 			}
 
       &:focus {
-				background-color: darken($greyDark, 10%);
+				// background-color: darken($greyDark, 10%);
         &::-webkit-scrollbar {
-					opacity: 1;
+					// opacity: 1;
 				}
       }
 
